feat: add tests for products